PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Global_Variables_multiple_no_type.pf
module Binary{

    a = 34

}